<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginFragment">
    <ImageView
        android:id="@+id/atar_logo"
        android:layout_width="355dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:src="@drawable/ataraxia_logo" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_email"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/gray"
        android:hint="@string/enter_you_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="80dp"
        android:textColorHint="@color/gray"
        android:layout_below="@+id/atar_logo">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray"
            android:importantForAutofill="no"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_password"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:passwordToggleEnabled="true"
        app:hintTextColor="@color/gray"
        android:hint="@string/password"
        app:passwordToggleTint="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="@color/gray"
        android:layout_below="@+id/lay_email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:textColor="@color/gray"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/chbox_politica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_password"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/politica"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:buttonTint="@color/gray" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chbox_politica"
        android:layout_gravity="bottom"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue_company"
        android:text="@string/ingresar"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp" />

    <TextView
        android:id="@+id/txt_olvido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/olvido_contrasena"
        android:textColor="@color/gray"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="176dp"
        android:layout_height="80dp"
        android:layout_below="@+id/txt_olvido"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_empresa" />

</RelativeLayout>