
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:openDrawer="start"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:id="@+id/home_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:title=" "
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            app:contentInsetStart="10dp"
            android:layout_height="80dp"
             >
            <ImageView
                android:id="@+id/ic_earth"
                app:tint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/ic_earth_black" />
            <ImageView
                android:id="@+id/toolbar_ataraxia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ataraxia_logo" />
        </com.google.android.material.appbar.MaterialToolbar>
        <!-- CONTENT -->
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/navigation" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_weight="1">
                <Button
                    android:id="@+id/btn_invers"
                    style="@style/btnStyle"
                    android:text="@string/mis_inversiones"
                    android:drawableRight="@drawable/button_drawable"
                    tools:ignore="RtlHardcoded" />
            </TableRow>
            <TableRow android:layout_weight="1">
                <Button
                    android:id="@+id/btn_notficacion"
                    style="@style/btnStyle"
                    android:drawableRight="@drawable/button_drawable"
                    android:text="@string/notificaciones"
                    tools:ignore="RtlHardcoded" />
            </TableRow>
            <TableRow android:layout_weight="1">
                <Button
                    android:id="@+id/btn_educacion"
                    style="@style/btnStyle"
                    android:drawableRight="@drawable/button_drawable"
                    android:text="@string/educaci_n"
                    tools:ignore="RtlHardcoded" />
            </TableRow>
            <TableRow android:layout_weight="1">
                <Button
                    android:id="@+id/btn_contacto"
                    style="@style/btnStyle"
                    android:drawableRight="@drawable/button_drawable"
                    android:text="@string/contacto"
                    tools:ignore="RtlHardcoded" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true" >
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
